# MeditationApp

./: .gitignore  ARCHITECTURE.md  Cargo.toml  MIGRATION.md  Nextcloud-Sync.md  PLAN.md  README.md  TODO.md  VIBRATION_ARCHITECTURE.md  build.rs  meson.build
.cargo/: config.toml
.github/workflows/: flatpak.yml
baseline/: BASELINE.md  PHASE5_RESULTS.md
build-aux/: cargo-build.py  cargo-sources.json  dev-xbuild.sh  io.github.janekbt.Meditate.json
data/: io.github.janekbt.Meditate.desktop.in  io.github.janekbt.Meditate.gresource.xml  io.github.janekbt.Meditate.gschema.xml  io.github.janekbt.Meditate.metainfo.xml.in  io.github.janekbt.Meditate.service.in  meson.build  style.css
data/sounds/: CREDITS.md
data/ui/: log_view.blp  shortcuts.ui  stats_view.blp  timer_view.blp  window.blp
meditate-core/: Cargo.toml
meditate-core/src/: breath.rs  db.rs  format.rs  lib.rs  timer.rs
meditate-core/src/sync/: backoff.rs  fake.rs  mod.rs  orchestrator.rs  webdav.rs
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  it.po  meditate.pot  meson.build  nl.po  pl.po  pt_BR.po  ru.po  zh_CN.po
rewrite/: Cargo.toml
rewrite/src/: breath.rs  db.rs  format.rs  lib.rs  timer.rs
src/: application.rs  bells.rs  config.rs  data_io.rs  diag.rs  guided.rs  i18n.rs  keychain.rs  labels.rs  main.rs  meson.build  preferences.rs  preset_config.rs  presets.rs  recovery_dialog.rs  sound.rs  sounds.rs  sync_runner.rs  sync_settings.rs  time.rs  vibration.rs  vibration_editor.rs  vibration_proto.rs  vibrations.rs
src/db/: mod.rs
src/log/: imp.rs  mod.rs
src/stats/: imp.rs  mod.rs
src/timer/: breathing.rs  imp.rs  mod.rs
src/window/: imp.rs  mod.rs
