[package]
name = "meditate"
version = "26.4.4"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "meditate"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_7"] }
glib = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
libc = "0.2"
chrono = { version = "0.4", default-features = false }
meditate-core = { path = "rewrite" }

[build-dependencies]
glib-build-tools = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
