[package]
name = "meditate-core"
version = "0.0.0"
edition = "2021"
description = "Pure-Rust logic core for the Meditate app — breath patterns, stats, labels, persistence. No GTK."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
